# newBostonDrf

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  READMe.rst  pyproject.toml
core/core/utils/: misc.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
