[tool.poetry]
name = "core-tutorial-django"
version = "0.1.0"
description = ""
authors = ["Ameh Solomon Onyeke <amehsolomon46@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
django-filter = "^23.3"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
pre-commit = "^3.5.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cooking_core.project.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["cooking_core"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
